<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="txt_saldo_disponivel">Saldo disponível</string>
    <string name="txt_saldo_mais_limite">Saldo + Limite</string>
    <string name="txt_ver_extrato">Ver Extrato</string>
    <string name="txt_pagar">Pagar</string>
    <string name="txt_transferir">Transferir</string>
    <string name="txt_recarregar">Recarregar</string>
    <string name="txt_cartao_final">Cartão Final</string>
    <string name="txt_notificacoes">Notificações</string>
    <string name="txt_ola_usuario">Olá</string>
    <string name="txt_iv_ola_cliente" translatable="false">"Image View Olá Cliente "</string>
    <string name="txt_tipo_de_conta">Cc</string>
    <string name="txt_cifrao">R$</string>
    <string name="txt_abreviacao_agencia">Ag</string>
    <string name="txt_descricao_iv_update_saldo" translatable="false">Imagem do ícone de atualizar saldo</string>
    <string name="txt_descricao_iv_expand" translatable="false">Ícone para expandir informações sobre saldo</string>
    <string name="txt_menu_opcoes">Opções</string>
</resources>