<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@android:color/white"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:contentDescription="@string/txt_iv_ola_cliente" />

    <TextView
        android:id="@+id/tv_ola_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ola_usuario"
        android:textSize="18sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/tv_ola_usuario"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@+id/tv_ola_usuario"/>

    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_abreviacao_agencia"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="4dp"

        app:layout_constraintStart_toStartOf="@id/tv_ola_usuario"
        app:layout_constraintTop_toBottomOf="@+id/tv_ola_usuario"/>

    <TextView
        android:id="@+id/tv_numero_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginStart="4dp"

        app:layout_constraintStart_toEndOf="@id/tv_agencia"
        app:layout_constraintTop_toTopOf="@+id/tv_agencia"/>

    <TextView
        android:id="@+id/tv_tipo_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/txt_tipo_de_conta"
        android:textStyle="bold"
        android:layout_marginStart="16dp"

        app:layout_constraintStart_toEndOf="@+id/tv_numero_agencia"
        app:layout_constraintTop_toTopOf="@+id/tv_agencia" />

    <TextView
        android:id="@+id/tv_numero_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginStart="4dp"

        app:layout_constraintStart_toEndOf="@+id/tv_tipo_conta"
        app:layout_constraintTop_toTopOf="@+id/tv_agencia" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_card_conta"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_agencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_update_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_update_white_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:contentDescription="@string/txt_descricao_iv_update_saldo" />

            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_saldo_disponivel"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@id/iv_update_saldo"
                app:layout_constraintBottom_toBottomOf="@id/iv_update_saldo"
                app:layout_constraintLeft_toRightOf="@id/iv_update_saldo"
                />

            <ImageView
                android:id="@+id/iv_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand_less_white_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/txt_descricao_iv_expand" />

            <TextView
                android:id="@+id/tv_cifrao_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_cifrao"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_disponivel"
                app:layout_constraintStart_toStartOf="@id/iv_update_saldo"/>

            <TextView
                android:id="@+id/tv_valor_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toTopOf="@id/tv_cifrao_saldo"
                app:layout_constraintStart_toEndOf="@id/tv_cifrao_saldo"/>

            <TextView
                android:id="@+id/tv_saldo_mais_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_saldo_mais_limite"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_valor_saldo_disponivel"
                app:layout_constraintStart_toStartOf="@id/tv_valor_saldo_disponivel"/>

            <TextView
                android:id="@+id/tv_cifrao_saldo_mais_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_cifrao"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/tv_saldo_mais_limite"
                app:layout_constraintStart_toEndOf="@id/tv_saldo_mais_limite"/>

            <TextView
                android:id="@+id/tv_valor_saldo_mais_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/tv_cifrao_saldo_mais_limite"
                app:layout_constraintStart_toEndOf="@id/tv_cifrao_saldo_mais_limite"/>

            <View
                android:id="@+id/v_grey_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_mais_limite"/>

            <TextView
                android:id="@+id/tv_ver_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ver_extrato"
                android:textColor="@color/redSecundary"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/v_grey_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_pagar"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_conta"
        app:layout_constraintStart_toStartOf="@id/mcv_card_conta"
        app:layout_constraintEnd_toStartOf="@id/mcv_transferir"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/tv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pagar"
                app:layout_constraintTop_toBottomOf="@id/iv_pagar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_transferir"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_conta"
        app:layout_constraintStart_toStartOf="@id/mcv_card_conta"
        app:layout_constraintEnd_toEndOf="@id/mcv_card_conta"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_transform_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/tv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_transferir"
                app:layout_constraintTop_toBottomOf="@id/iv_transferir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_recarregar"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_conta"
        app:layout_constraintStart_toEndOf="@id/mcv_transferir"
        app:layout_constraintEnd_toEndOf="@id/mcv_card_conta"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_recarregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone_android_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/tv_recarregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_recarregar"
                app:layout_constraintTop_toBottomOf="@id/iv_recarregar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/iv_cartao_final"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@color/redPrimary"
        app:layout_constraintEnd_toEndOf="@id/mcv_recarregar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/mcv_pagar"
        app:layout_constraintTop_toBottomOf="@id/mcv_pagar" />

    <TextView
        android:id="@+id/tv_cartao_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cartao_final"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final"
        app:layout_constraintBottom_toBottomOf="@+id/iv_cartao_final"
        app:layout_constraintStart_toStartOf="@id/iv_cartao_final"
        app:layout_constraintEnd_toStartOf="@id/tv_numeros_cartao_final"
        />

    <TextView
        android:id="@+id/tv_numeros_cartao_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final"
        app:layout_constraintBottom_toBottomOf="@+id/iv_cartao_final"
        app:layout_constraintStart_toEndOf="@id/tv_cartao_final"
        app:layout_constraintEnd_toEndOf="@id/tv_cartao_final"
        />

    <ImageView
        android:id="@+id/iv_more_cartao_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more_black_24dp"
        android:layout_margin="32dp"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final"
        app:layout_constraintEnd_toEndOf="@id/iv_cartao_final"
        />


</androidx.constraintlayout.widget.ConstraintLayout>